--- a/SE/Styles/main.css
+++ b/SE/Styles/main.css
@@ -8,17 +8,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 */
 
 body {
-  background: #fafafa;
+  background: lightgray;
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
 
-h2 {
+h1, h2 {
   text-align: center;
-}
-
-h3 {
-  margin-bottom: 0px;
 }
 
  .heading {
@@ -35,28 +31,33 @@ h3 {
         text-align: left;
  }
 
-
-paper-checkbox {
-  margin-right: 50px;
-  margin-bottom: 10px;
+paper-material {
+  background: #fafafa;
+  margin-left: 1%;
+  margin-right: 1%;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
-#date {
-  width: 25%;
+footer {
+  text-align: left;
+  margin-left:1%;
 }
 
-#searchButton {
-  margin-top: 10px;
+#contact{
 }
 
-#menuLinks li {
-  display:inline-block;
-  list-style:none;
-  margin-left:auto;
-  margin-right:auto;
-  top: 0px;
+#emergency {
+  text-align: center;
 }
 
-paper-tabs #navBar {
-  display: none;
+#emergency h3 {
+  margin-bottom: 0;
 }
+
+#emergency h4 {
+  margin-top: 0;
+}
+
