--- a/SE/Styles/main.css
+++ b/SE/Styles/main.css
@@ -39,17 +39,45 @@ paper-material {
   padding-right: 1%;
   padding-top: 1%;
   padding-bottom: 1%;
+  overflow: hidden;
 }
 
+
+
+/* Content Styles */
+
+#image {
+    display: inline-block;
+    
+}
+
+#services {
+
+    display: inline-block;
+    padding-left: 1%;
+    vertical-align: top;
+}
+
+
+/* Footer Styles */
 footer {
-  text-align: left;
+
   margin-left:1%;
 }
 
+#disclaimer {
+    text-align: center;
+}
+
 #contact{
+   width: 25%;   
+   display: inline-block;
+   text-align: left;
 }
 
 #emergency {
+  width: 50%;
+  display: inline-block;
   text-align: center;
 }
 
